refactor: add jvmArgs configure to build.gradle